Move things outside of public, etc

--- a/front.html
+++ b/front.html
@@ -1,8 +1,8 @@
-<p>
-  This site is a celebration of old computers and technology (or, what is old and
+<p>This site is a celebration of old computers and technology (or, what is old and
   nostalgic to me). Everything here is designed to look like a late 2000's
   or early 2010's Linux desktop since that was the last time you could still feel
   90's era optimism about technology (or the future in general).
+<br>
 </p>
 
 <p>
